--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -232,7 +232,7 @@
                             <div class="text-container last">
                                 <h3>Inquire What Data We Have</h3>
                                 <p>Evolo Landing Page uses tracking technology on the landing page, in the Applications, and in the Platforms, including mobile application identifiers and a unique Evolo user ID to help us recognize you across different Services, to monitor usage and web traffic routing for the Services, and to customize and improve the Services.</p>
-                                <p> By visiting Evolo or using the Services you agree to the use of cookies in your browser and HTML-based emails. Cookies are small text files placed on your device when you visit a Cookies are small text files placed on your device when you visit a Cookies are small text files placed on your device when <a class="turquoise" href="#your-link">web site</a> in order to track.</p>
+                                <p> By visiting Evolo or using the Services you agree to the use of cookies in your browser and HTML-based emails.</p>
                             </div> <!-- end of text container -->
                         </div> <!-- end of col-->
                         <div class="col-md-6">
