copy and layout changes

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 mastering Excel or complex BI tools.</h1>
                             <p class="p-large">Effortlessly analyze, filter, compare, and share insights — all with just
                                 a few clicks. </p>
-                            <a class="btn-solid-lg page-scroll" href="#product">START NOW</a>
+                            <a class="btn-solid-lg page-scroll" href="https://funtoseeya.github.io/cuadro">START NOW →</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
 
@@ -128,48 +128,45 @@
     <!-- end of header -->
 
     <!-- Product -->
-    <div id="product" class="cards-1">
+    <div id="product"  class="p-5" style="background-color: #f7fcfd">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>Business Growth Services</h2>
-                    <p class="p-heading p-large">We serve small and medium sized companies in all tech related
-                        industries with high quality growth services which are presented below</p>
+            <div class="row mb-3">
+                <div class="col-lg-8">
+                    <span class="pill-button">Problem</span>
+                    <h2>Frustrated by endless steps to create simple charts?</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
-            <div class="row">
+            <div class="row cards-1">
                 <div class="col-lg-12">
 
                     <!-- Card -->
                     <div class="card">
-                        <img class="card-image" src="images/services-icon-1.svg" alt="alternative">
                         <div class="card-body">
-                            <h4 class="card-title">Market Analysis</h4>
-                            <p>Our team of enthusiastic marketers will analyse and evaluate how your company stacks
-                                against the closest competitors</p>
+                            <h4 class="card-title">Complex Data Formatting</h4>
+                            <p> Achieving the desired chart often requires complex data reformatting, like pivot tables or cross-tabulations.</p>
                         </div>
-                    </div>
-                    <!-- end of card -->
-
-                    <!-- Card -->
-                    <div class="card">
                         <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
-                        <div class="card-body">
-                            <h4 class="card-title">Opportunity Scan</h4>
-                            <p>Once the market analysis process is completed our staff will search for opportunities
-                                that are in reach</p>
-                        </div>
                     </div>
                     <!-- end of card -->
-
+                     
                     <!-- Card -->
                     <div class="card">
-                        <img class="card-image" src="images/services-icon-3.svg" alt="alternative">
                         <div class="card-body">
-                            <h4 class="card-title">Action Plan</h4>
-                            <p>With all the information in place you will be presented with an action plan that your
-                                company needs to follow</p>
+                            <h4 class="card-title">Tedious chart production.
+                            </h4>
+                            <p>Users must create charts one by one, wasting time and slowing down their analysis.</p>
                         </div>
+                        <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
+                    </div>
+                    <!-- end of card -->
+                     
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Steep learning curve</h4>
+                            <p>Most tools are bloated with excessive functionality, diluting their usability for most users.</p>
+                        </div>
+                        <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
                     </div>
                     <!-- end of card -->
 
@@ -186,7 +183,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h2>Design And Plan Your Business Growth Steps</h2>
+                        <h2><span class="turquoise">Supercharge your data: </span><br>Create and share charts 10x faster, hassle  free.</h2>
                         <p>Use our staff and our expertise to design and plan your business growth strategy. Evolo team
                             is eager to advise you on the best opportunities that you should look into</p>
                         <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">LIGHTBOX</a>
@@ -616,21 +613,24 @@
                         <p class="job-title">Founder</p>
 
                         <span class="social-icons">
-                                <span class="fa-stack">
-                                    <a href="https://www.linkedin.com/in/matias-fontecilla/">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-linkedin-in fa-stack-1x"></i>
-                                    </a>
-                                </span>
-                                <span class="fa-stack">
-                                    <a href="https://github.com/funtoseeya">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fa-brands fa-github fa-stack-1x"></i>                                    </a>
-                                </span>
-                            </span> <!-- end of social-icons -->
+                            <span class="fa-stack">
+                                <a href="https://www.linkedin.com/in/matias-fontecilla/">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                </a>
+                            </span>
+                            <span class="fa-stack">
+                                <a href="https://github.com/funtoseeya">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fa-brands fa-github fa-stack-1x"></i> </a>
+                            </span>
+                        </span> <!-- end of social-icons -->
                     </div>
                     <!-- end of team-member -->
-                    <p class="p-heading p-large">Hi! In my 8+ years of building software, I’ve seen how many people struggle with data tools like Excel. My mission is to make data analysis simple and accessible to everyone, so anyone—no matter their skill level—can confidently understand and use their data without feeling overwhelmed.</p>
+                    <p class="p-heading p-large">Hi! In my 8+ years of building software, I’ve seen how many people
+                        struggle with data tools like Excel. My mission is to make data analysis simple and accessible
+                        to everyone, so anyone—no matter their skill level—can confidently understand and use their data
+                        without feeling overwhelmed.</p>
 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -721,12 +721,7 @@
                 </div> <!-- end of col -->
                 <div class="col-md-4">
                     <div class="footer-col last">
-                        <h4>Social Media</h4>
-                        <span class="fa-stack">
-                            <a href="https://www.linkedin.com/in/matias-fontecilla/">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
-                            </a>
+                        Cuadro ©2024 - All rights reserved.
                         </span>
                     </div>
                 </div> <!-- end of col -->
