email addresses and copy

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                                 mastering Excel or complex BI tools.</h1>
                             <p class="p-large">Effortlessly analyze, filter, compare, and share insights — all with just
                                 a few clicks. </p>
-                            <a class="btn-solid-lg page-scroll" href="https://funtoseeya.github.io/cuadro">START NOW →</a>
+                            <a class="btn-solid-lg page-scroll" href="https://funtoseeya.github.io/cuadro">START NOW
+                                →</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
 
@@ -128,7 +129,7 @@
     <!-- end of header -->
 
     <!-- Product -->
-    <div id="product"  class="p-5" style="background-color: #f7fcfd">
+    <div id="product" class="p-5" style="background-color: #f7fcfd">
         <div class="container">
             <div class="row mb-3">
                 <div class="col-lg-8">
@@ -143,28 +144,30 @@
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Complex Data Formatting</h4>
-                            <p> Achieving the desired chart often requires complex data reformatting, like pivot tables or cross-tabulations.</p>
+                            <p> Achieving the desired chart often requires complex data reformatting, like pivot tables
+                                or cross-tabulations.</p>
                         </div>
                         <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
                     </div>
                     <!-- end of card -->
-                     
+
                     <!-- Card -->
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Tedious chart production.
+                            <h4 class="card-title">Tedious chart production
                             </h4>
                             <p>Users must create charts one by one, wasting time and slowing down their analysis.</p>
                         </div>
                         <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
                     </div>
                     <!-- end of card -->
-                     
+
                     <!-- Card -->
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Steep learning curve</h4>
-                            <p>Most tools are bloated with excessive functionality, diluting their usability for most users.</p>
+                            <p>Most tools are bloated with excessive functionality, diluting their usability for most
+                                users.</p>
                         </div>
                         <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
                     </div>
@@ -183,7 +186,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h2><span class="turquoise">Supercharge your data: </span><br>Create and share charts 10x faster, hassle  free.</h2>
+                        <h2><span class="turquoise">Supercharge your data: </span><br>Create and share charts 10x
+                            faster, hassle free.</h2>
                         <p>Use our staff and our expertise to design and plan your business growth strategy. Evolo team
                             is eager to advise you on the best opportunities that you should look into</p>
                         <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">LIGHTBOX</a>
