--- a/index.html
+++ b/index.html
@@ -144,21 +144,19 @@
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Complex Data Formatting</h4>
-                            <p> Achieving the desired chart often requires complex data reformatting, like pivot tables
-                                or cross-tabulations.</p>
+                            <p>Data often needs to be edited, copied, or coverted into pivot tables or cross-tabs to get desired outputs.</p>
                         </div>
-                        <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
+                        <img class="card-image" src="images/big-dashboard.svg" alt="alternative">
                     </div>
                     <!-- end of card -->
 
                     <!-- Card -->
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Tedious chart production
-                            </h4>
-                            <p>Users must create charts one by one, wasting time and slowing down their analysis.</p>
+                            <h4 class="card-title">Time-intensive process</h4>
+                            <p>Significant time is wasted producing charts one by one and pasting them into an exportable format. </p>
                         </div>
-                        <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
+                        <img class="card-image" src="images/slow-process.jpg" alt="alternative">
                     </div>
                     <!-- end of card -->
 
@@ -166,10 +164,9 @@
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Steep learning curve</h4>
-                            <p>Most tools are bloated with excessive functionality, diluting their usability for most
-                                users.</p>
+                            <p>Most tools are bloated with excessive functionality, making them unecessarily complicated for most users.</p>
                         </div>
-                        <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
+                        <img class="card-image" src="images/learning-curve.jpg" alt="alternative">
                     </div>
                     <!-- end of card -->
 
