--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </li>
             </ul>
             <a class="btn-outline-reg" href="https://funtoseeya.github.io/cuadro"
-                style="padding: 1.1875rem 1.125rem 1.1875rem 1.125rem">Get started</a>
+                style="padding: 1.1875rem 1.125rem 1.1875rem 1.125rem">Cuadro app</a>
 
         </div>
     </nav> <!-- end of navbar -->
@@ -366,7 +366,7 @@
     <!-- end of video -->
 
     <!-- Roadmap -->
-    <div id="roadmap" class="cards-2">
+    <div id="roadmap" class="cards-2 ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -424,8 +424,7 @@
                                 </li>
                             </ul>
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="https://funtoseeya.github.io/cuadro/">Try
-                                    now</a>
+                                <a class="btn-solid-reg page-scroll" href="https://funtoseeya.github.io/cuadro/">Get started</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
@@ -510,12 +509,8 @@
     <div class="slider-2">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
-                    <div class="image-container">
-                        <img class="img-fluid" src="images/testimonials-2-men-talking.svg" alt="alternative">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-6">
+               
+                <div class="col-lg-6 offset-lg-3">
                     <h2>Testimonials</h2>
 
                     <!-- Card Slider -->
@@ -588,7 +583,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>About The Team</h2>
+                    <h2>Hey, I'm Matias!</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -617,7 +612,7 @@
                         </span> <!-- end of social-icons -->
                     </div>
                     <!-- end of team-member -->
-                    <p class="p-heading p-large">Hi! In my 8+ years of building software, I’ve seen how many people
+                    <p class="p-heading p-large">In nearly 10 years of building software, I’ve seen time and time again how many people
                         struggle with data tools like Excel. My mission is to make data analysis simple and accessible
                         to everyone, so anyone—no matter their skill level—can confidently understand and use their data
                         without feeling overwhelmed.</p>
