screenshot img in landing page

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="header-content">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-6">
                         <div class="text-container">
                             <h1><span class="turquoise">Make sense of data</span><br> without the hassle of
                                 mastering Excel or complex BI tools.</h1>
@@ -118,6 +118,13 @@
                                 →</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
+                    <div class="col-lg-6">
+                        <div class="image-container pt-5">
+                            <img src="images/analysis-screenshot.PNG" class="img-fluid" 
+                                 style="filter: brightness(1.2); border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+                        </div>
+                    </div>
+                    
 
                 </div>
             </div>
