--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -137,7 +137,7 @@
                 <div class="col-lg-10 offset-lg-1">
                     <div class="text-container">
                         <h3>Private Data We Receive And Collect</h3>
-                        <p>Evolo also automatically collects and receives certain information from your computer or mobile device, including the activities you perform on our Website, the Platforms, and the Applications, the type of hardware and software you are using (for example, your operating system or browser), and information obtained from cookies. For example, each time you visit the Website or otherwise use the Services, we automatically collect your IP address, browser and device type, access times, the web page from which you came, the regions from which you navigate the web page, and the web page(s) you access (as applicable).</p>
+                        <p>Cuadro  collects and receives certain information from your computer or mobile device, including the activities you perform on our Website and Application, and information obtained from cookies. For example, each time you visit the Website or which buttons you click. We automatically collect your IP address, browser and device type, access times, the web page from which you came, the regions from which you navigate the web page, and the web page(s) you access (as applicable).</p>
                         <p>When you first register for a Evolo account, and when you use the Services, we collect some <a class="turquoise" href="#your-link">Personal Information</a> about you such as:</p>
                         <div class="row">
                             <div class="col-md-6">
