update nav bars in t&c pp page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <!-- Early Access Button and Form -->
         <div id="earlyAccessNav" class="d-flex align-items-center">
-            <button class="btn-outline-reg" id="earlyAccessButton" style="padding: 1.1875rem 1.125rem;">Start building</button>
+            <button class="btn-solid-reg" id="earlyAccessButton" style="padding: 1.1875rem 1.125rem;">Start building</button>
             <form id="earlyAccessFormNav" method="POST" action="sendEmail.php" style="display: none; margin-left: 1rem;">
                 <input type="email" name="email" class="form-control" placeholder="Enter your email" required>
                 <button type="submit" class="btn btn-solid-reg">Submit</button>
