--- a/index.html
+++ b/index.html
@@ -110,27 +110,53 @@
 <!-- end of navigation -->
 
 
-    <!-- Header -->
-    <header id="header" class="header">
-        <div class="header-content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="text-container">
-                            <h1><span class="turquoise">Make sense of data</span><br> without the hassle of
-                                mastering Excel or complex BI tools.</h1>
-                            <p class="p-large">Effortlessly analyze, filter, compare, and share insights — all with just
-                                a few clicks. </p>
-                            <a class="btn-solid-lg page-scroll" href="#pricing">Get started (it's free)
-                                →</a>
-                        </div> <!-- end of text-container -->
-                    </div> <!-- end of col -->
-                    <div class="col-lg-6">
-                        <div class="image-container pt-5">
-                            <img src="images/analysis-screenshot.PNG" class="img-fluid"
-                                style="filter: brightness(1.2); border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-                        </div>
+   <!-- Header -->
+<header id="header" class="header">
+    <div class="header-content">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="text-container">
+                        <h1><span class="turquoise">Make sense of data</span><br> without the hassle of mastering Excel or complex BI tools.</h1>
+                        <p class="p-large">Effortlessly analyze, filter, compare, and share insights — all with just a few clicks.</p>
+                        <a class="btn-solid-lg page-scroll" href="#pricing">Get started (it's free) →</a>
+                        
+                        <!-- Additional Content -->
+<div class="d-flex flex-column flex-md-row align-items-center mt-3">
+    <!-- Avatars -->
+    <div class="d-flex avatar-group mb-2 mb-md-0">
+        <img src="images/kat-avatar.jpeg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
+        <img src="images/kat-avatar.jpeg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
+        <img src="images/kat-avatar.jpeg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
+        <img src="images/kat-avatar.jpeg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
+        <img src="images/kat-avatar.jpeg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; border: 2px solid white;">
+    </div>
+    <!-- Stars and Text -->
+    <div class="text-content ms-3 mt-2 mt-md-0">
+        <div class="text-warning mb-1">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <p class="mb-0 small-text">Helping users build hassle-free</p>
+    </div>
+</div>
+<!-- End Additional Content -->
+
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-6">
+                    <div class="image-container pt-5">
+                        <img src="images/analysis-screenshot.PNG" class="img-fluid" style="filter: brightness(1.2); border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
                     </div>
+                </div>
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of header-content -->
+</header>
+
 
 
                 </div>
