--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
     <!-- Avatars -->
     <div class="d-flex avatar-group mb-2 mb-md-0">
         <img src="images/kat-avatar.jpeg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
-        <img src="images/kat-avatar.jpeg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
-        <img src="images/kat-avatar.jpeg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
-        <img src="images/kat-avatar.jpeg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
-        <img src="images/kat-avatar.jpeg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; border: 2px solid white;">
+        <img src="images/dj-avatar.jpg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
+        <img src="images/devon-avatar.jpg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
+        <img src="images/scotty-avatar.jpg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; margin-right: -10px; border: 2px solid white;">
+        <img src="images/gerry-avatar.jpg" class="rounded-circle avatar-img" style="width: 50px; height: 50px; border: 2px solid white;">
     </div>
     <!-- Stars and Text -->
     <div class="text-content ms-3 mt-2 mt-md-0">
@@ -140,7 +140,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
         </div>
-        <p class="mb-0 small-text">Helping users build hassle-free</p>
+        <p class="mb-0 small-text">Dozens of hassle-free builders</p>
     </div>
 </div>
 <!-- End Additional Content -->
