--- a/index.html
+++ b/index.html
@@ -395,12 +395,12 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/testimonial-1.svg" alt="alternative">
+                                        <img class="card-image" src="images/dj-avatar.jpg" alt="alternative">
                                         <div class="card-body">
                                             <p class="testimonial-text">I just finished my trial period and was so
                                                 amazed with the support and results that I purchased Evolo right away at
                                                 the special price.</p>
-                                            <p class="testimonial-author">Katarina Pranke - Consultant</p>
+                                            <p class="testimonial-author">David Julien - Electrician</p>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
@@ -409,12 +409,12 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/testimonial-2.svg" alt="alternative">
+                                        <img class="card-image" src="images/kat-avatar.jpeg" alt="alternative">
                                         <div class="card-body">
                                             <p class="testimonial-text">Evolo has always helped or startup to position
                                                 itself in the highly competitive market of mobile applications. You will
                                                 not regret using it!</p>
-                                            <p class="testimonial-author">Devon Phelps - Marketing Manager</p>
+                                            <p class="testimonial-author">Kat Pranke - Consultant</p>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
@@ -423,12 +423,12 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/testimonial-3.svg" alt="alternative">
+                                        <img class="card-image" src="images/scotty-avatar.jpg" alt="alternative">
                                         <div class="card-body">
                                             <p class="testimonial-text">Love their services and was so amazed with the
                                                 support and results that I purchased Evolo for two years in a row. They
                                                 are awesome.</p>
-                                            <p class="testimonial-author">John Smith - Little league coach</p>
+                                            <p class="testimonial-author">Scott Yan - Search & Rescue</p>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
