link back to app.cuadro.io

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- Thank You Message (hidden initially) -->
             <div id="thankYouMessageNav" style="display: none; margin-left: 1rem;">
                 <p>Thank you! You've been added to the early access list.</p>
-                <a class="btn btn-solid-reg" href="https://funtoseeya.github.io/cuadro">Go to Site</a>
+                <a class="btn btn-solid-reg" href="https://app.cuadro.io">Go to Site</a>
             </div>
         </div>
     </div>
@@ -343,7 +343,7 @@
             <!-- Thank You Message & Redirect Button (optional, for success feedback) -->
             <div id="thankYouMessage" style="display: none;">
                 <p>Thank you! You've been added to the early access list.</p>
-                <a class="btn btn-solid-reg" href="https://funtoseeya.github.io/cuadro">Go to Site</a>
+                <a class="btn btn-solid-reg" href="https://app.cuadro.io">Go to Site</a>
             </div>
 
         <ul class="list-unstyled li-space-lg">
