--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -110,7 +110,7 @@
                 <!-- Thank You Message (hidden initially) -->
                 <div id="thankYouMessageNav" style="display: none; margin-left: 1rem;">
                     <p>Thank you! You've been added to the early access list.</p>
-                    <a class="btn btn-solid-reg" href="https://funtoseeya.github.io/cuadro">Go to Site</a>
+                    <a class="btn btn-solid-reg" href="https://app.cuadro.io">Go to Site</a>
                 </div>
             </div>
         </div>
@@ -146,7 +146,7 @@
                     <a class="nav-link page-scroll" href="index.html#contact">Contact</a>
                 </li>
             </ul>
-            <a class="btn-outline-reg" href="https://funtoseeya.github.io/cuadro"
+            <a class="btn-outline-reg" href="https://app.cuadro.io"
                 style="padding: 1.1875rem 1.125rem 1.1875rem 1.125rem">Cuadro app</a>
 
         </div>
