--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -108,7 +108,7 @@
                 <!-- Thank You Message (hidden initially) -->
                 <div id="thankYouMessageNav" style="display: none; margin-left: 1rem;">
                     <p>Thank you! You've been added to the early access list.</p>
-                    <a class="btn btn-solid-reg" href="https://funtoseeya.github.io/cuadro">Go to Site</a>
+                    <a class="btn btn-solid-reg" href="https://app.cuadro.io">Go to Site</a>
                 </div>
             </div>
         </div>
