--- a/index.html
+++ b/index.html
@@ -406,9 +406,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/dj-avatar.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">I just finished my trial period and was so
-                                                amazed with the support and results that I purchased Evolo right away at
-                                                the special price.</p>
+                                            <p class="testimonial-text">Cuadro has been a lifesaver. I can upload my data and get the charts I need in minutes. Sure, it does not have every chart option out there, but it has exactly what I use 99% of the time.</p>
                                             <p class="testimonial-author">David Julien - Electrician</p>
                                         </div>
                                     </div>
@@ -420,9 +418,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/kat-avatar.jpeg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">Evolo has always helped or startup to position
-                                                itself in the highly competitive market of mobile applications. You will
-                                                not regret using it!</p>
+                                            <p class="testimonial-text">I used to spend so much time in Excel creating pivot tables and creating complicated formulas just to create a comparison. Honestly, this tool gets it right. So straightforward and to the point.</p>
                                             <p class="testimonial-author">Kat Pranke - Consultant</p>
                                         </div>
                                     </div>
@@ -432,12 +428,10 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/scotty-avatar.jpg" alt="alternative">
+                                        <img class="card-image" src="images/gerry-avatar.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">Love their services and was so amazed with the
-                                                support and results that I purchased Evolo for two years in a row. They
-                                                are awesome.</p>
-                                            <p class="testimonial-author">Scott Yan - Search & Rescue</p>
+                                            <p class="testimonial-text">Finally, I don't have to spend hours turning my data upside down just to get a few charts out. </p>
+                                            <p class="testimonial-author">Gerry Chevalier - Student Services</p>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
