--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/kat-avatar.jpeg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">I used to spend so much time in Excel creating pivot tables and creating complicated formulas just to create a comparison. Honestly, this tool gets it right. So straightforward and to the point.</p>
+                                            <p class="testimonial-text">I used to spend so much time in Excel creating pivot tables and running annoyingly complicated formulas just to create a few graphs. Honestly, this tool gets it right. So straightforward and to the point.</p>
                                             <p class="testimonial-author">Kat Pranke - Consultant</p>
                                         </div>
                                     </div>
