--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/dj-avatar.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">Cuadro has been a lifesaver. I can upload my data and get the charts I need in minutes. Sure, it does not have every chart option out there, but it has exactly what I use 99% of the time.</p>
+                                            <p class="testimonial-text">Cuadro has been a lifesaver. I can upload my data and get the charts I need in seconds. Learning Excel is not how I want to spend my time!</p>
                                             <p class="testimonial-author">David Julien - Electrician</p>
                                         </div>
                                     </div>
@@ -418,7 +418,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/kat-avatar.jpeg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">I used to spend so much time in Excel creating pivot tables and running annoyingly complicated formulas just to create a few graphs. Honestly, this tool gets it right. So straightforward and to the point.</p>
+                                            <p class="testimonial-text"> Honestly, this tool gets it right. So straightforward and to the point. Sure, it does not have every chart option out there, but it has exactly what I use 99% of the time.</p>
                                             <p class="testimonial-author">Kat Pranke - Consultant</p>
                                         </div>
                                     </div>
@@ -430,7 +430,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/gerry-avatar.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">Finally, I don't have to spend hours turning my data upside down just to get a few charts out. </p>
+                                            <p class="testimonial-text">I just used Cuadro in a team meeting, and it was a game-changer. Cuadro delivered every time my team asked to view the data in different ways. Doing that in Excel would have been impossible! </p>
                                             <p class="testimonial-author">Gerry Chevalier - Student Services</p>
                                         </div>
                                     </div>
