--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div class="row mb-3">
                 <div class="col-lg-8">
                     <span class="pill-button">Problem</span>
-                    <h2>Frustrated by endless steps just to create simple charts?</h2>
+                    <h2>Frustrated by endless steps just to create a few simple charts?</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row cards-1">
@@ -430,7 +430,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/gerry-avatar.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">I just used Cuadro in a team meeting, and it was a game-changer. Cuadro delivered every time my team asked to view the data in different ways. Doing that in Excel would have been impossible! </p>
+                                            <p class="testimonial-text">I just used Cuadro in a team meeting, and it was a game-changer. It litterally gave us everything we needed in seconds. Doing that in Excel would have been the worst! </p>
                                             <p class="testimonial-author">Gerry Chevalier - Student Services</p>
                                         </div>
                                     </div>
